Remade elements with flexbox and changed styling

--- a/index.html
+++ b/index.html
@@ -16,14 +16,22 @@
 </header>
 <nav>
     <ul class="ulist">
-        <li><a href="https://github.com/Mark-Ustby">GitHub</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li class="navlink"><a href="https://github.com/Mark-Ustby">GitHub</a></li>
+        <li class="navlink"><a href="about.html">About</a></li>
+        <li class="navlink"><a href="contact.html">Contact</a></li>
     </ul>
 </nav>
 
 
 <body>
+    <section>
+        <header>
+            <h2 id="PortfolioProjects">Portfolio Projects:</h2>
+        </header>
+
+
+        
+    </section>
 
 </body>
 
