--- a/index.html
+++ b/index.html
@@ -28,11 +28,44 @@
         <header>
             <h2 id="PortfolioProjects">Portfolio Projects:</h2>
         </header>
-
-
-        
     </section>
 
+    <!-- section for listing and displaying projects -->
+    <section>
+        <div id="project">
+            <!-- first column in row -->
+            <div id="container-left">
+                <div>
+                    <h3>Project 1</h3>
+                </div>
+                <div>
+                    <h3>Project 2</h3>
+                </div>
+                <div>
+                    <h3>Project 3</h3>
+                </div>
+                <div>
+                    <h3>Project 4</h3>
+                </div>
+            </div>
+            <!-- second column in row -->
+            <div id="container-right">
+                <div>
+                    <h3>Project 5</h3>
+                </div>
+                <div>
+                    <h3>Project 6</h3>
+                </div>
+                <div>
+                    <h3>Project 7</h3>
+                </div>
+                <div>
+                    <h3>Project 8</h3>
+                </div>
+            </div>
+
+
+    </section>
 </body>
 
 </html>
