fixed flex box positions, added first project image/gif, and added javascript buttons for changing image

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="./Assets/Css/style.css">
-
+    <script src="Assets\js\scripts.js"></script>
 </head>
 
 <header>
@@ -36,32 +36,33 @@
             <!-- first column in row -->
             <div id="container-left">
                 <div>
-                    <h3>Project 1</h3>
+                    <button class="buttons" id="button1" type="button">
+                        Project 1
+                    </button>
                 </div>
                 <div>
-                    <h3>Project 2</h3>
+                    <button class="buttons" id="button2" type="button">
+                        Project 2
+                    </button>
                 </div>
                 <div>
-                    <h3>Project 3</h3>
+                    <button class="buttons" id="button3" type="button">
+                        Project 3
+                    </button>
                 </div>
                 <div>
-                    <h3>Project 4</h3>
+                    <button class="buttons" id="button4" type="button">
+                        Project 4
+                    </button>
                 </div>
             </div>
             <!-- second column in row -->
             <div id="container-right">
                 <div>
-                    <h3>Project 5</h3>
+                    <h3>image slideshow</h3>
+                    <img id="img" src="Assets\gifs\horiseon_page_project.gif" alt="image1">
                 </div>
-                <div>
-                    <h3>Project 6</h3>
-                </div>
-                <div>
-                    <h3>Project 7</h3>
-                </div>
-                <div>
-                    <h3>Project 8</h3>
-                </div>
+                
             </div>
 
 
