Added about me section and changed color styling

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <nav>
     <ul class="ulist">
         <li class="navlink"><a href="https://github.com/Mark-Ustby">GitHub</a></li>
-        <li class="navlink"><a href="about.html">About</a></li>
+        <li class="navlink"><a href="#about-me">About</a></li>
         <li class="navlink"><a href="#contact">Contact</a></li>
     </ul>
 </nav>
@@ -75,6 +75,16 @@
 
     </section>
 </body>
+<section id="about-me">
+    <div>
+        <h3>About me</h3>
+    </div>
+    <div>
+        <p>
+            My name is Mark Ustby and I am a web developer. I have a passion for creating web applications and I am currently
+            learning how to code. I am currently working on projects to fill this portfolio and am looking forward to learning more
+            through the University of Minnesota's online coding bootcamp. </p>
+</section>
 <footer>
     <p id="contact">&copy; 2022 Mark Ustby -ustbymark@gmail.com</p>
 </footer>
