--- a/index.html
+++ b/index.html
@@ -41,9 +41,12 @@
                     </button>
                     <div class="project-paragraph">
                         <p>
-                            This project focused on fixing semantic errors in the source code. This is imoprtant because it allows
-                            for the website to be more accessible to users through search enginges like google. This is because
-                            search engines favor websites that use semantic elements by putting them at the top of the search results leading to higher traffic.
+                            This project focused on fixing semantic errors in the source code. This is imoprtant because
+                            it allows
+                            for the website to be more accessible to users through search enginges like google. This is
+                            because
+                            search engines favor websites that use semantic elements by putting them at the top of the
+                            search results leading to higher traffic.
                         </p>
                     </div>
                 </div>
@@ -81,8 +84,10 @@
     </div>
     <div>
         <p>
-            My name is Mark Ustby and I am a web developer. I have a passion for creating web applications and I am currently
-            learning how to code. I am currently working on projects to fill this portfolio and am looking forward to learning more
+            My name is Mark Ustby and I am a web developer. I have a passion for creating web applications and I am
+            currently
+            learning how to code. I am currently working on projects to fill this portfolio and am looking forward to
+            learning more
             through the University of Minnesota's online coding bootcamp. </p>
 </section>
 <footer>
