added media query for accessibility on smaller resolutions, buttons now take you to image of project, and added some small css change

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </div>
                 </div>
                 <div class="button-boxes">
-                    <button class="buttons" id="button2" type="button">
+                    <button class="buttons" id="button2" type="button"><a href="#img"></a>
                         Project 2
                     </button>
                 </div>
