--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <h1 id="title">Portfolio</h1>
 
 </header>
+<!-- top navigation bar for information about projects and how to contact -->
 <nav>
     <ul class="ulist">
         <li class="navlink"><a href="https://github.com/Mark-Ustby">GitHub</a></li>
@@ -22,10 +23,10 @@
     </ul>
 </nav>
 
-
+<main><!-- main content of the page -->
 <body>
     <section>
-        <header>
+        <header id="portfolio-header">
             <h2 id="PortfolioProjects">Portfolio Projects:</h2>
         </header>
     </section>
@@ -78,6 +79,7 @@
 
     </section>
 </body>
+</main>
 <section id="about-me">
     <div>
         <h3>About me</h3>
