alt tag to image and added overview of this project to the readme.md

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     </ul>
 </nav>
 
-<main><!-- main content of the page -->
+<!-- main content of the page -->
+<main>
 <body>
     <section>
         <header id="portfolio-header">
@@ -52,7 +53,7 @@
                     </div>
                 </div>
                 <div class="button-boxes">
-                    <button class="buttons" id="button2" type="button"><a href="#img"></a>
+                    <button class="buttons" id="button2" type="button"><a href="#img" alt="Image of horiseon project"></a>
                         Project 2
                     </button>
                 </div>
